# openclaw-output-vetter-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SPEC.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
src/openclaw_output_vetter_mcp/: __init__.py  __main__.py  demo.py  render.py  report.py  server.py  types.py
src/openclaw_output_vetter_mcp/scanners/: __init__.py  action_outcome.py  grounding.py  swallowed_exceptions.py  transcript.py
tests/: test_action_outcome.py  test_grounding.py  test_server.py  test_swallowed_exceptions.py  test_transcript.py
