[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-output-vetter-mcp"
version = "1.0.0"
description = "MCP server for verifying AI agent claims vs reality — single-transcript inline grounding-check that flags when an agent's response states facts not in the input context, when its code silently swallows exceptions and substitutes mock data, or when its multi-turn transcript contains contradictions or unverified completion claims. Sub-second, local, free, MCP-native — designed to be called inline from Claude Code / Cursor / Cline / OpenClaw agents during the conversation, not as a separate eval-pipeline. The lightweight complement to dashboard-based eval frameworks (DeepEval, Phoenix, LangSmith)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Temur Khan", email = "temur@pixelette.tech" },
]
keywords = ["mcp", "model-context-protocol", "claude", "anthropic", "openai", "ai-agent", "production-ai", "hallucination-detection", "grounding-check", "agent-verification", "transcript-review", "swallowed-exception", "claim-verification", "openclaw", "agent-ops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
openclaw-output-vetter-mcp = "openclaw_output_vetter_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/temurkhan13/openclaw-output-vetter-mcp"
Documentation = "https://github.com/temurkhan13/openclaw-output-vetter-mcp/blob/main/SPEC.md"
"Bug Tracker" = "https://github.com/temurkhan13/openclaw-output-vetter-mcp/issues"
"Custom MCP Build" = "https://github.com/temurkhan13/openclaw-output-vetter-mcp#need-this-adapted-to-your-stack"
Changelog = "https://github.com/temurkhan13/openclaw-output-vetter-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_output_vetter_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
